[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geniustopics"
version = "0.0.0-dev1"
dependencies = [
    "pandas",
]
requires-python = ">=3.12"
authors = [{name = "Charlie Marshall", email = "charliemarshall1996@gmail.com"}]
description = "Analysis of lyrics from Genius"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Natural Language Processing", "Music", "Genius", "Lyrics"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/charliemarshall1996/GeniusTopics"
"Bug Tracker" = "https://github.com/charliemarshall1996/GeniusTopics/issues"
Changelog = "https://github.com/charliemarshall1996/GeniusTopics/blob/master/CHANGELOG.md"