[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geniustopics"
version = "0.0.1"

requires-python = ">=3.8"

description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://charlie-marshall.dev/geniustopics"
